--- a/vignettes/episensr.Rmd
+++ b/vignettes/episensr.Rmd
@@ -1,58 +1,184 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Quantitative Bias Analysis for Epidemiologic Data"
+author: "Denis Haine"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: 
+  rmarkdown::html_vignette:
+    fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Quantitative Bias Analysis for Epidemiologic Data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+Quantitative bias analysis allows to estimate nonrandom errors in epidemiologic
+studies, assessing the magnitude and direction of biases, and quantifying their
+uncertainties.
+Every study has some random error due to its limited sample size, and is
+susceptible to systematic errors as well, from selection bias to the presence of
+(un)known confounders or information bias (measurement error, including
+misclassification).
+Bias analysis methods were compiled by Lash et al. in their
+book
+[Applying Quantitative Bias Analysis to Epidemiologic Data"](https://www.springer.com/us/book/9780387879604).
+This package implements the various bias analyses from that book, which are also
+(available)[https://sites.google.com/site/biasanalysis/] (for some) as a
+spreadsheet or a SAS macro.
+This vignette provides some examples on how to use the package.
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+## Selection Bias
 
-## Vignette Info
+We will use a case-control study by
+[Stang et al.](http://www.ncbi.nlm.nih.gov/pubmed/16523014) on the relation
+between mobile phone use and uveal melanoma.
+The observed odds ratio for the association between regular mobile phone use vs.
+no mobile phone use with uveal melanoma incidence is 0.71 [95% CI 0.51-0.97].
+But there was a substantial difference in participation rates between cases and
+controls (94% vs 55%, respectively) and so selection bias could have an impact
+on the association estimate.
+The 2X2 table for this study is the following:
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+|          | Regular use | No use |
+|---------:|:-----------:|:------:|
+| Cases    | 136         | 107    |
+| Controls | 297         | 165    |
 
-## Styles
+We use the function `selection` as shown below.
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+```{r selection}
+library(episensr)
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+stang <- selection(matrix(c(136, 107, 297, 165),
+                          dimnames = list(c("UM+", "UM-"), c("Mobile+", "Mobile-")),
+                          nrow = 2, byrow = TRUE),
+                   bias_parms = c(.94, .85, .64, .25))
+stang
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+The various `episensr` functions return an object which is a list containing the
+input and output variables.
+You can check it out with `str()`.
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+The 2X2 table is provided as a matrix and selection probabilities given with the
+argument `bias_parms`, a vector with the 4 probabilities (guided by the
+participation rates in cases and controls) in the following order: among cases
+exposed, among cases unexposed, among noncases exposed, and among noncases
+unexposed.
+The output shows the observed 2X2 table, the same table corrected for
+the selection proportions, the observed odds ratio (and relative risk) followed
+by the corrected ones, and the input parameters, including the selection bias
+odds ratio.
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+## Uncontrolled Confounders
 
-## More Examples
+We will use date from a cross-sectional study by
+[Tyndall et al.](http://www.ncbi.nlm.nih.gov/pubmed/8879763) on the association
+between male circumcision and the risk of acquiring HIV, which might be
+confounded by religion.
+The code to account for unmeasured or unknown confounders is the following,
+where the 2X2 table is given as a matrix.
+We choose a risk ratio implementation, provide a vector defining the prevalence
+of the confounder, religion, among the exposed and the unexposed, and give the
+risk ratio associating the confounder with the disease.
 
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r confounders}
+confounders(matrix(c(105, 85, 527, 93),
+                   dimnames = list(c("HIV+", "HIV-"), c("Circ+", "Circ-")),
+                   nrow = 2, byrow = TRUE),
+            type = "RR",
+            bias_parms = c(.63, .8, .05))
 ```
 
-Also a quote using `>`:
+The output gives the crude 2X2 table, the 2X2 tables by levels of the
+confounder, the crude relative risk and confounder specific measures of
+association between exposure and outcome, and the relationship adjusted for the
+unknown confounder, using a standardized morbidity ratio (SMR) or a
+Mantel-Haenszel (MH) estimate of the risk ratio.
+Finally, the bias parameters are shown: the association between the confounder
+and the outcome among those who were not exposed, the prevalence of the
+confounder among the exposed, and the prevalence of the confounder among the
+unexposed.
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+## Probabilistic Sensitivity Analysis for Exposure Misclassification
+
+We use a study on the effect of smoking during pregnancy on breast cancer risk
+([Fink & Lash](http://www.ncbi.nlm.nih.gov/pubmed/12946045), where we assume
+nondifferential misclassification of the exposure, smoking, with probability
+density functions for sensitivities (Se) and specificities (Sp) among cases and
+noncases equal to uniform distributions with a minimum of 0.7 and a maximum of
+0.95 for sensitivities (0.9 and 0.99 respectively for specificities).
+We choose to correct for exposure misclassification with the argument `type =
+exposure`.
+We ask for 10000 replications (default is 1000).
+The Se and Sp for cases (`seca`, `spca`) are given as a list with its first
+element referring to the type of distribution (choice between constant, uniform,
+triangular, trapezoidal, logit-logistic, and logit-normal) and the second
+element giving the distribution parameters (min and max for uniform
+distribution).
+By avoiding to provide information on the noncases (`seexp`, `spexp`), we are
+referring to a nondifferential misclassification.
+
+```{r probsens}
+smoke.nd <- probsens(matrix(c(215, 1449, 668, 4296),
+                            dimnames = list(c("BC+", "BC-"), c("Smoke+", "Smoke-")),
+                            nrow = 2, byrow = TRUE),
+                     type = "exposure",
+                     reps = 10000,
+                     seca.parms = list("uniform", c(.7, .95)),
+                     spca.parms = list("uniform", c(.9, .99)))
+```
+
+The output gives the 2X2 table, the observed measures of association, and the
+corrected measures of association.
+
+We saved the `probsens` analysis in a new variable `smoke.nd`.
+We can see the element of the object `probsens` with the function `str()`:
+
+```{r str}
+str(smoke.nd)
+```
+
+`smoke.nd` is a list of 4 elements where different information on the analysis
+done are saved.
+We have `smoke.nd$obs.data` where we have the observed 2X2 table,
+`smoke.nd$obs.measures` (the observed measures of association),
+`smoke.nd$adj.measures` (the adjusted measures of association), and
+`smoke.nd$sim.df`, a data frame with the simulated variables from each
+replication, like the Se and Sp, the 4 cells of the adjusted 2X2 table, and the
+adjusted measures.
+We can plot the Se prior distribution (not forgetting to discard the draws that
+led to negative adjustments).
+
+```{r plot}
+hist(smoke.nd$sim.df[!is.na(smoke.nd$sim.df$corr.RR), ]$seca,
+     breaks = seq(0.65, 1, 0.01),
+     col = "lightgreen",
+     main = NULL,
+     xlab = "Sensitivity for Cases")
+```
+
+## Bootstrapping
+
+Selection and misclassification bias models can be bootstrapped in order to get
+confidence interval on the adjusted association parameter.
+We can use the ICU dataset from Hosmer and
+Lemeshow
+[Applied Logistic Regression](http://ca.wiley.com/WileyCDA/WileyTitle/productCd-0470582472.html) textbook.
+
+```{r, boot}
+library(aplore3)  # to get ICU data
+data(icu)
+
+misclass_eval <- misclassification(icu$sta, icu$inf,
+                                   type = "exposure",
+                                   bias_parms = c(.75, .85, .9, .95))
+misclass_eval
+set.seed(123)
+misclass_boot <- boot.bias(misclass_eval, R = 10000)
+misclass_boot
+```
+
+```{r, boot_fig, fig.cap = "Bootstrap confidence interval.", warning=F}
+plot(misclass_boot, "rr")
+```
+
