--- a/vignettes/episensr.Rmd
+++ b/vignettes/episensr.Rmd
@@ -152,6 +152,42 @@ hist(smoke.nd$sim.df[!is.na(smoke.nd$sim.df$corr.RR), ]$seca,
      xlab = "Sensitivity for Cases")
 ```
 
+## Probabilistic Sensitivity Analysis for Uncontrolled Confounding
+
+Let's illustrate this function with this example from [Modern Epidemiology by
+Rothman, Greenland &
+Lash](https://shop.lww.com/Modern-Epidemiology/p/9781451190052), where the
+association between occupational resins exposure and lung cancer mortality is
+studied, together with the presence of an unmeasured potential confounder,
+smoking ([Greenland et al., 1994](https://www.ncbi.nlm.nih.gov/pubmed/7927843)).
+
+|          | Resins exposed | Resins unexposed |
+|---------:|:--------------:|:----------------:|
+|    Cases | 45             | 94               |
+| Controls | 257            | 945              |
+
+Prior probability distributions are given to each bias parameters.
+Prevalences of smoking in those exposed to resins, and of smoking in those
+unexposed to resins receive prior distributions that are uniform between 0.40
+and 0.70. 
+Prior distribution for the odds ratio associating smoking with lung cancer
+mortality is log-normal with 95% limits of 5 and 15.
+The mean of this distribution is [ln(15) + ln(5)] / 2 = 2.159, and its standard
+deviation is [ln(15) - ln(5)] / 3.92 = 0.28.
+
+```{r probsens-conf}
+set.seed(123)
+probsens.conf(matrix(c(45, 94, 257, 945),
+                     dimnames = list(c("Cases+", "Cases-"), c("Res+", "Res-")),
+                     nrow = 2, byrow = TRUE),
+              reps = 50000,
+              prev.exp = list("uniform", c(.4, .7)),
+              prev.nexp = list("uniform", c(.4, .7)),
+              risk = list("log-normal", c(2.159, .28)))
+```
+
+The median adjusted OR is 1.76 [1.25,2.49].
+
 ## Bootstrapping
 
 Selection and misclassification bias models can be bootstrapped in order to get
