Fix (pkgdown) Order vignette + cosmetic changes.

--- a/vignettes/2_probabilistic.Rmd
+++ b/vignettes/2_probabilistic.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette:
     fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{02-Probabilistic sensitivity analysis}
+  %\VignetteIndexEntry{Probabilistic Sensitivity Analysis}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
