--- a/vignettes/4_other_sens.Rmd
+++ b/vignettes/4_other_sens.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette:
     fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{04-Additional sensitivity analyses}
+  %\VignetteIndexEntry{Additional Sensitivity Analyses}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
