--- a/vignettes/3_multiple_bias.Rmd
+++ b/vignettes/3_multiple_bias.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette:
     fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{03-Multiple bias modeling}
+  %\VignetteIndexEntry{Multiple Bias Modeling}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
