Feat (cite) Citation file and citation in README.

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,14 +15,18 @@ knitr::opts_chunk$set(
 
 # episensr <img src="man/figures/logo.png" align="right" width=120 />
 
+<!-- badges: start -->
 
 [![Build Status](https://travis-ci.org/dhaine/episensr.svg?branch=master)](https://travis-ci.org/dhaine/episensr)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/episensr)](https://cran.r-project.org/package=episensr)
+[![DOI](https://zenodo.org/badge/DOI/XX.XXXX/zenodo.XXXXXXXX.svg)](https://doi.org/XX.XXXXX/zenodo.XXXXXXXXX)
 [![Codecov test
 coverage](https://codecov.io/gh/dhaine/episensr/branch/master/graph/badge.svg)](https://codecov.io/gh/dhaine/episensr?branch=master)
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![Lifecycle:maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 [![Total CRAN downloads](https://cranlogs.r-pkg.org/badges/grand-total/episensr)](https://cran.r-project.org/package=episensr)
+
+<!-- badges: end -->
 
 The R package **episensr** allows to do basic sensitivity analysis of
 epidemiological results as described in **Applying Quantitative Bias Analysis to
@@ -35,6 +39,14 @@ function is available in Stata
 ## License
 
 This package is free and open source software, licensed under GPL2.
+
+## Citation
+
+To cite **episensr**, please use:
+
+```{r}
+citation("episensr")
+```
 
 ## Example
 
