Fix (vignettes + readme) Correct URLs.

--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,7 @@ citation("episensr")
 ## Example
 
 We will use a case-control study by
-[Stang et al.](http://www.ncbi.nlm.nih.gov/pubmed/16523014) on the relation
+[Stang et al.](https://pubmed.ncbi.nlm.nih.gov/16523014/) on the relation
 between mobile phone use and uveal melanoma.
 The observed odds ratio for the association between regular mobile phone use vs.
 no mobile phone use with uveal melanoma incidence is 0.71 [95% CI 0.51-0.97].
