--- a/vignettes/d_other_sens.Rmd
+++ b/vignettes/d_other_sens.Rmd
@@ -174,11 +174,11 @@ ggplot(dat2, aes(x = RR_CD, y = bias_perc, group = COX2, colour = COX2)) +
 
 ## Unmeasured Confounding and E-value
 
-E-value, introduced by [VanderWeele et al.](https://doi.org/10.7326/M16-2607),
-is the minimum strength of association on the risk ratio scale that an
-unmeasured confounder would need to have with both the exposure and the outcome,
-conditional on the measured covariates, to fully explain away a specific
-exposure-outcome association.
+E-value, introduced by [VanderWeele et
+al.](https://www.acpjournals.org/doi/10.7326/M16-2607), is the minimum strength
+of association on the risk ratio scale that an unmeasured confounder would need
+to have with both the exposure and the outcome, conditional on the measured
+covariates, to fully explain away a specific exposure-outcome association.
 
 For example, a study by [Victoria et
 al.](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(87)90902-0/fulltext)
