Fix (vignette) Correct URL.

--- a/vignettes/d_other_sens.Rmd
+++ b/vignettes/d_other_sens.Rmd
@@ -175,7 +175,7 @@ ggplot(dat2, aes(x = RR_CD, y = bias_perc, group = COX2, colour = COX2)) +
 ## Unmeasured Confounding and E-value
 
 E-value, introduced by [VanderWeele et
-al.](https://www.acpjournals.org/doi/10.7326/M16-2607), is the minimum strength
+al.](https://pubmed.ncbi.nlm.nih.gov/28693043/), is the minimum strength
 of association on the risk ratio scale that an unmeasured confounder would need
 to have with both the exposure and the outcome, conditional on the measured
 covariates, to fully explain away a specific exposure-outcome association.
