--- a/vignettes/c_multiple_bias.Rmd
+++ b/vignettes/c_multiple_bias.Rmd
@@ -2,7 +2,7 @@
 title: "Multiple Bias Modeling"
 author: "Denis Haine"
 date: "`r Sys.Date()`"
-output: 
+output:
   rmarkdown::html_vignette:
     fig_caption: yes
 vignette: >
@@ -16,7 +16,7 @@ Bias functions in `episensr` can be applied sequentially to quantify bias
 resulting from multiple biases.
 
 Following the example in [Lash et
-al.](https://www.springer.com/us/book/9780387879604), we can use the study by [Chien et
+al.](https://link.springer.com/book/10.1007/978-3-030-82673-4), we can use the study by [Chien et
 al.](https://link.springer.com/article/10.1007%2Fs10549-005-9056-0).
 It is a case-control study looking at the association between antidepressant use and the
 occurrence of breast cancer. The observed OR was 1.2 [0.9--1.6].
@@ -45,7 +45,7 @@ We can combine the misclassification bias with a selection bias thanks to the
 function `multiple.bias`:
 
 ```{r misclass_sel}
-chien %>% 
+chien %>%
     misclassification(., type = "exposure", bias_parms = c(.56, .58, .99, .97)) %>%
     multiple.bias(., bias_function = "selection", bias_parms = c(.73, .61, .82, .76))
 ```
@@ -150,7 +150,7 @@ mod6 <- chien %>%
                   case.exp = list("beta", c(8.08, 24.25)),
                   case.nexp = list("trapezoidal", c(.75, .85, .95, 1)),
                   ncase.exp = list("beta", c(12.6, 50.4)),
-                  ncase.nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1))) %>% 
+                  ncase.nexp = list("trapezoidal", c(0.7, 0.8, 0.9, 1))) %>%
     multiple.bias(., bias_function = "probsens.conf",
                   prev.exp = list("beta", c(24.9, 58.1)),
                   prev.nexp = list("beta", c(42.9, 54.6)),
