--- a/vignettes/d_other_sens.Rmd
+++ b/vignettes/d_other_sens.Rmd
@@ -13,7 +13,7 @@ vignette: >
 
 Other functions could be useful and are not part of the book
 ["Applying Quantitative Bias Analysis to Epidemiologic
-Data"](https://www.springer.com/us/book/9780387879604).
+Data"](https://link.springer.com/book/10.1007/978-3-030-82673-4).
 These functions are:
 
 * `confounders.array`: Bias due to unmeasured confounders based on confounding imbalance among exposed and unexposed
