--- a/vignettes/c_multiple_bias.Rmd
+++ b/vignettes/c_multiple_bias.Rmd
@@ -73,11 +73,11 @@ We can do the same in a probabilistic framework:
 set.seed(123)
 mod1 <- chien %>%
     probsens(., type = "exposure", reps = 100000,
-             seca.parms = list("trapezoidal", c(.45, .5, .6, .65)),
-             seexp.parms = list("trapezoidal", c(.4, .48, .58, .63)),
-             spca.parms = list("trapezoidal", c(.95, .97, .99, 1)),
-             spexp.parms = list("trapezoidal", c(.96, .98, .99, 1)),
-             corr.se = .8, corr.sp = .8)
+             seca = list("trapezoidal", c(.45, .5, .6, .65)),
+             seexp = list("trapezoidal", c(.4, .48, .58, .63)),
+             spca = list("trapezoidal", c(.95, .97, .99, 1)),
+             spexp = list("trapezoidal", c(.96, .98, .99, 1)),
+             corr_se = .8, corr_sp = .8)
 mod1
 ```
 ```{r plot2, warning=FALSE,message=FALSE,fig.width=6,fig.height=4}
@@ -98,7 +98,7 @@ mod2
 ```
 
 ```{r plot3, warning=FALSE,message=FALSE,fig.width=6,fig.height=4}
-plot(mod2, "or")
+#plot(mod2, "or")
 ```
 
 * Confounding
@@ -114,7 +114,7 @@ mod3
 ```
 
 ```{r plot4, message=FALSE, warning=FALSE,fig.width=6,fig.height=4}
-plot(mod3, "or")
+#plot(mod3, "or")
 ```
 
 * Misclassification then selection
@@ -123,11 +123,11 @@ plot(mod3, "or")
 set.seed(123)
 chien %>%
     probsens(., type = "exposure", reps = 100000,
-             seca.parms = list("trapezoidal", c(.45, .5, .6, .65)),
-             seexp.parms = list("trapezoidal", c(.4, .48, .58, .63)),
-             spca.parms = list("trapezoidal", c(.95, .97, .99, 1)),
-             spexp.parms = list("trapezoidal", c(.96, .98, .99, 1)),
-             corr.se = .8, corr.sp = .8) %>%
+             seca = list("trapezoidal", c(.45, .5, .6, .65)),
+             seexp = list("trapezoidal", c(.4, .48, .58, .63)),
+             spca = list("trapezoidal", c(.95, .97, .99, 1)),
+             spexp = list("trapezoidal", c(.96, .98, .99, 1)),
+             corr_se = .8, corr_sp = .8) %>%
     multiple.bias(., bias_function = "probsens.sel",
                   case.exp = list("beta", c(8.08, 24.25)),
                   case.nexp = list("trapezoidal", c(.75, .85, .95, 1)),
@@ -141,11 +141,11 @@ chien %>%
 set.seed(123)
 mod6 <- chien %>%
     probsens(., type = "exposure", reps = 100000,
-             seca.parms = list("trapezoidal", c(.45, .5, .6, .65)),
-             seexp.parms = list("trapezoidal", c(.4, .48, .58, .63)),
-             spca.parms = list("trapezoidal", c(.95, .97, .99, 1)),
-             spexp.parms = list("trapezoidal", c(.96, .98, .99, 1)),
-             corr.se = .8, corr.sp = .8) %>%
+             seca = list("trapezoidal", c(.45, .5, .6, .65)),
+             seexp = list("trapezoidal", c(.4, .48, .58, .63)),
+             spca = list("trapezoidal", c(.95, .97, .99, 1)),
+             spexp = list("trapezoidal", c(.96, .98, .99, 1)),
+             corr_se = .8, corr_sp = .8) %>%
     multiple.bias(., bias_function = "probsens.sel",
                   case.exp = list("beta", c(8.08, 24.25)),
                   case.nexp = list("trapezoidal", c(.75, .85, .95, 1)),
@@ -159,7 +159,7 @@ mod6
 ```
 
 ```{r plot5, message=FALSE, warning=FALSE,fig.width=6,fig.height=4}
-plot(mod6, "or")
+#plot(mod6, "or")
 
-plot(mod6, "or_tot")
+#plot(mod6, "or_tot")
 ```
