--- a/vignettes/d_other_sens.Rmd
+++ b/vignettes/d_other_sens.Rmd
@@ -98,8 +98,7 @@ wireframe(RR_adj ~ RR_CD * P_C1,
                                 start = 0, end = max(1, 100 - 1) / 100,
                                 alpha = .8),
           screen = list(z = -60, x = -60),
-          panel = function(...)
-          {
+          panel = function(...) {
               panel.wireframe(...)
               grid.text("Observed RR = 1\nPrevalence confounder\namong unexposed = 0.5",
                         0.125, 0.175, default.units = "native")
@@ -134,20 +133,18 @@ And we can extend to several confounders:
 
 ```{r conf_ext_apply,warning=FALSE,message=FALSE,fig.width=8,fig.height=6}
 dat <- expand.grid(RR_CD = seq(0.1, 1, 0.1))
-dat$nsaid <- apply(dat, 1,
-                   function(x) confounders.ext(1,
-                                               bias_parms = c(x[1], 0.9, 0.1, 0.4))[[3]][2])
-dat$non_user <- apply(dat, 1,
-                      function(x) confounders.ext(1,
-                                                  bias_parms = c(x[1], 1.03, 0.09,
-                                                                 0.12))[[3]][2])
-dat$naproxen <- apply(dat, 1,
-                      function(x) confounders.ext(1,
-                                                  bias_parms = c(x[1], 1.15, 0.09,
-                                                                 0.79))[[3]][2])
-dat$rof_napro <- apply(dat, 1,
-                       function(x) confounders.ext(1,
-                                               bias_parms = c(x[1], 1.6, 0.1, 0.51))[[3]][2])
+dat$nsaid <- apply(dat, 1, function(x) confounders.ext(1,
+                                                       bias_parms = c(x[1], 0.9,
+                                                                      0.1, 0.4))[[3]][2])
+dat$non_user <- apply(dat, 1, function(x) confounders.ext(1,
+                                                          bias_parms = c(x[1], 1.03,
+                                                                         0.09, 0.12))[[3]][2])
+dat$naproxen <- apply(dat, 1, function(x) confounders.ext(1,
+                                                          bias_parms = c(x[1], 1.15,
+                                                                         0.09, 0.79))[[3]][2])
+dat$rof_napro <- apply(dat, 1, function(x) confounders.ext(1,
+                                                           bias_parms = c(x[1], 1.6,
+                                                                          0.1, 0.51))[[3]][2])
 library(tidyr)
 dat2 <- dat %>% gather(nsaid, non_user, naproxen, rof_napro,
                        key = "COX2", value = "bias_perc")
